RESOLVED FIXED164236
[WK1] Candidate visibility should not update as a result of selection during a dictionary lookup
https://bugs.webkit.org/show_bug.cgi?id=164236
Summary [WK1] Candidate visibility should not update as a result of selection during ...
Wenson Hsieh
Reported 2016-10-31 12:54:42 PDT
For WK1, we currently set candidate list visibility to NO when performing a dictionary lookup on mousedown due to a temporary selection change. We fixed the WK2 case in https://trac.webkit.org/changeset/205983, but the WK1 case was never addressed.
Attachments
Patch (11.74 KB, patch)
2016-10-31 13:07 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2016-10-31 12:55:06 PDT
Wenson Hsieh
Comment 2 2016-10-31 13:07:30 PDT
WebKit Commit Bot
Comment 3 2016-10-31 16:22:15 PDT
Comment on attachment 293456 [details] Patch Clearing flags on attachment: 293456 Committed r208191: <http://trac.webkit.org/changeset/208191>
WebKit Commit Bot
Comment 4 2016-10-31 16:22:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.